--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,12 @@
             "allow": [],
             "depConstraints": [
               {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
+                "sourceTag": "scope:client",
+                "onlyDependOnLibsWithTags": ["scope:client"]
+              },
+              {
+                "sourceTag": "scope:admin",
+                "onlyDependOnLibsWithTags": ["scope:admin"]
               }
             ]
           }
